[gd_scene load_steps=28 format=3 uid="uid://cbx04ovn4ncdp"]

[ext_resource type="Script" path="res://scripts/lilcrossiant.gd" id="1_73afe"]
[ext_resource type="Script" path="res://scripts/health.gd" id="2_qm62o"]
[ext_resource type="Texture2D" uid="uid://wj2xreldyf4d" path="res://funnyimg4game/Croissante.squish.special-Sheet.png" id="3_5mefs"]
[ext_resource type="Texture2D" uid="uid://c7p44sdotsofx" path="res://funnyimg4game/Croissante.squish-Sheet.png" id="4_ymx73"]
[ext_resource type="Texture2D" uid="uid://ceh3e6ldo1m4s" path="res://funnyimg4game/Crossiante.walk-Sheet.png" id="5_sclr6"]
[ext_resource type="Script" path="res://scripts/hurtbox.gd" id="6_7riuw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mreq0"]
atlas = ExtResource("3_5mefs")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_phbbr"]
atlas = ExtResource("3_5mefs")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua3gk"]
atlas = ExtResource("3_5mefs")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpeog"]
atlas = ExtResource("3_5mefs")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_711m8"]
atlas = ExtResource("3_5mefs")
region = Rect2(256, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4twq"]
atlas = ExtResource("3_5mefs")
region = Rect2(320, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjmms"]
atlas = ExtResource("3_5mefs")
region = Rect2(384, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7t80"]
atlas = ExtResource("3_5mefs")
region = Rect2(448, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfuyd"]
atlas = ExtResource("4_ymx73")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3k8ii"]
atlas = ExtResource("4_ymx73")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccyyo"]
atlas = ExtResource("4_ymx73")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6oor"]
atlas = ExtResource("4_ymx73")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_emr3n"]
atlas = ExtResource("4_ymx73")
region = Rect2(256, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjmqc"]
atlas = ExtResource("4_ymx73")
region = Rect2(320, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpk0l"]
atlas = ExtResource("4_ymx73")
region = Rect2(384, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h32bm"]
atlas = ExtResource("4_ymx73")
region = Rect2(448, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbgqk"]
atlas = ExtResource("5_sclr6")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uqvj"]
atlas = ExtResource("5_sclr6")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ss4si"]
atlas = ExtResource("5_sclr6")
region = Rect2(128, 0, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_3mwpw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mreq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phbbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua3gk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpeog")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_711m8")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_y4twq")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_vjmms")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_v7t80")
}],
"loop": false,
"name": &"brutal death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfuyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3k8ii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccyyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6oor")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_emr3n")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_mjmqc")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_xpk0l")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_h32bm")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbgqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uqvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss4si")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uqvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uqvj")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hlnlx"]
radius = 8.0
height = 58.0

[node name="lilCrossiant" type="Node2D"]
script = ExtResource("1_73afe")

[node name="Health" type="Node" parent="."]
script = ExtResource("2_qm62o")
maxHealth = 2
health = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_3mwpw")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.909623

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(29, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-29, 0)

[node name="RayCastDown" type="RayCast2D" parent="."]
target_position = Vector2(0, 9)

[node name="RayCastRightDown" type="RayCast2D" parent="."]
position = Vector2(30, 0)
target_position = Vector2(0, 13)

[node name="RayCastLeftDown" type="RayCast2D" parent="."]
position = Vector2(-30, 0)
target_position = Vector2(0, 13)

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("health")]
collision_layer = 0
collision_mask = 8
script = ExtResource("6_7riuw")
health = NodePath("../Health")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_hlnlx")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5

[connection signal="healthDepleted" from="Health" to="." method="_on_health_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
